@startuml

title __LAB2A's Class Diagram__\n

  namespace  {
    namespace UI {
      class GUI.CarController {
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.CarView {
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.DrawPanel {
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.VehicleGUI {
      }
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace odel {
      abstract class Model.Car {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.CarFerry {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.CarWorkshop {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Flatbed {
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.IFlatbed {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.IMovable {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.IPositionable {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.IRamp {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.ISizeable {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.ITransportable {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace Interfaces {
        interface Model.Interfaces.ITransportableHolder {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class Model.MotorizedVehicle {
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class Model.Movable {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Ramp {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Saab95 {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Scania {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.TransportableHolder {
      }
    }
  }
  

  namespace  {
    namespace odel {
      abstract class Model.Truck {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.Volvo240 {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class Model.VolvoFH16 {
      }
    }
  }
  

  GUI.CarController o-- GUI.CarView : frame
  GUI.CarView -up-|> javax.swing.JFrame
  GUI.CarView o-- GUI.CarController : carC
  GUI.CarView o-- GUI.DrawPanel : drawPanel
  GUI.DrawPanel -up-|> javax.swing.JPanel
  GUI.VehicleGUI o-- Model.MotorizedVehicle : vehicle
  Model.Car .up.|> Model.Interfaces.ITransportable
  Model.Car -up-|> Model.MotorizedVehicle
  Model.CarFerry .up.|> Model.Interfaces.ITransportableHolder
  Model.CarFerry -up-|> Model.MotorizedVehicle
  Model.CarFerry o-- Model.Ramp : ramp
  Model.CarFerry o-- Model.TransportableHolder : transportableHolder
  Model.CarWorkshop .up.|> Model.Interfaces.IPositionable
  Model.CarWorkshop .up.|> Model.Interfaces.ITransportableHolder
  Model.CarWorkshop o-- Model.TransportableHolder : transportableHolder
  Model.Flatbed .up.|> Model.Interfaces.IFlatbed
  Model.MotorizedVehicle .up.|> Model.Interfaces.ISizeable
  Model.MotorizedVehicle -up-|> Model.Movable
  Model.Movable .up.|> Model.Interfaces.IMovable
  Model.Movable o-- Model.Interfaces.IMovable.Direction : currentDirection
  Model.Ramp .up.|> Model.Interfaces.IRamp
  Model.Saab95 -up-|> Model.Car
  Model.Scania -up-|> Model.Truck
  Model.Scania o-- Model.Flatbed : flatbed
  Model.TransportableHolder .up.|> Model.Interfaces.IPositionable
  Model.TransportableHolder .up.|> Model.Interfaces.ITransportableHolder
  Model.Truck -up-|> Model.MotorizedVehicle
  Model.Volvo240 -up-|> Model.Car
  Model.VolvoFH16 .up.|> Model.Interfaces.ITransportableHolder
  Model.VolvoFH16 -up-|> Model.Truck
  Model.VolvoFH16 o-- Model.Ramp : ramp
  Model.VolvoFH16 o-- Model.TransportableHolder : transportableHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
